add custom fonts

--- a/manifest.json
+++ b/manifest.json
@@ -1,7 +1,7 @@
 {
-	"name": "Sample Theme",
+	"name": "Mine Obsidian",
 	"version": "1.0.0",
 	"minAppVersion": "1.0.0",
-	"author": "Obsidian",
-	"authorUrl": "https://obsidian.md"
+	"author": "Fury Torch",
+	"authorUrl": "https://github.com/FewLy-Torch-1861"
 }
